--- a/index3.html
+++ b/index3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pl">
   <head>
-    <link rel="icon" href="/favicon_io/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon_io/android-chrome-512x512.png" type="image/x-icon">
 
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -14,10 +14,10 @@
   <body>
     <nav>
         <ul class="menu">
-            <li><a href="/index.html">PUB 1316</a></li>
+            <li><a href="/index.html">Głowna</a></li>
             <li><a href="/index2.html">Galeria</a></li>
-            <li><a href="/index3.html">Sklep</a></li>
-            <li><a href="/index4.html">Koszyk &nbsp; <span id="cart-count">0</span></a></li>
+            <li><a href="/index3.html">Zapisy</a></li>
+            <li><a>Jest juz nas &nbsp; <span id="cart-count">0</span></a></li>
     
         </ul>
     
@@ -62,9 +62,7 @@
     </div>
 </main>
 
-<footer class="theme-event">
-    <p>© Pub 1316 - Wydarzenia</p>
-</footer>
+
 
 <!-- Skrypty specyficzne dla tej podstrony (jeśli są potrzebne i nie ma ich w głównym skrypcie) -->
 <!-- Pamiętaj, że muszą być one obsługiwane przez funkcję executeScriptsFromNewBody() -->
